# server/router/user-basic.go
@@ -1,13 +1,16 @@
 package router
 
 import (
-	"chatgin/api"
+	"chatgin/api/v1/system"
 	"github.com/gin-gonic/gin"
 )
 
 func SysBaseUser(Router *gin.RouterGroup) {
-	SysBasicUser := Router.Group("/user-basic")
+	sysBasicRouter := Router.Group("/user-basic")
 	{
-		SysBasicUser.POST("/add", api.UserBasicAdd)
+		sysBasicRouter.POST("/add", system.UserBasicAdd)         //用户信息添加
+		sysBasicRouter.DELETE("/delete", system.UserBasicDelete) //用户信息删除
+		sysBasicRouter.PUT("/update", system.UserBasicUpdate)    //用户信息修改
+		sysBasicRouter.POST("/query", system.UserBasicQuery)     //用户信息查询
 	}
 }
